2004-04-28  Daniel Macks  <dmacks@netspace.org>

	* Makefile: Use /usr/bin/perl for tests since that's how fink runs.

2004-04-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.20.1, a release
	on branch_0_20 which adds Provides to system-perl packages >= 5.8.0

2004-04-04  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.20.0

2004-03-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.18.4, a release
	on branch_0_18 with bootstrapping improvements

2004-03-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl: Be careful about permissions when creating directories

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* fink.conf.5.in: Documented "Buildpath". Fixed "Distribution" to
	include all known trees and use of postinstall.pl to set it.

2004-03-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.19.2, a release
	on branch_0_19 which incorporates the pathsetup change

2004-03-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.18.3, a release
	on branch_0_18 which incorporates the pathsetup change

2004-03-16  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* INDEX, INDEX.html, install.sh, setup.sh: change from 
	pathsetup.command to pathsetup.sh

2004-03-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* fink.in: Updated copyright notice displayed by fink

2004-03-05  Daniel Macks  <dmacks@netspace.org>

	* fink.conf.5.in: Reworded FetchAltDir description.

2004-02-25  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.19.1, a bugfix release 
	on branch_0_19

2004-02-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.19.0

2004-02-16  Daniel Macks  <dmacks@netspace.org>

	* STYLE: a style guide for the fink core code.
